syntax = "proto3";

option go_package = "github.com/hiroto1220/go-playground/gRPC-gateway/gen";

import "google/api/annotations.proto";

package hello;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse){
        option (google.api.http) = {
          post: "/hello"
          body: "*"
        };
  }
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}